tests/paczka1/small_fuzzy/81001952.err
Error in line 4: S686 A593 70,8
Error in line 8: ZcbW A946 82,6
Error in line 11: 3ckW1fG A946 90,7
